--- a/Earplugs-Notebook.ipynb
+++ b/Earplugs-Notebook.ipynb
@@ -17,8 +17,9 @@
    "id": "f74a28fe",
    "metadata": {},
    "source": [
-    "Plano Molding co. \n",
-    "Mendota, IL facility"
+    "# Plano Molding Co. \n",
+    "# Mendota, IL facility\n",
+    "***"
    ]
   },
   {
@@ -26,13 +27,13 @@
    "id": "65032d8c",
    "metadata": {},
    "source": [
-    "# Earplug Dispensor \n",
-    "## Moldex plugstation<br>\n",
+    "## Earplug Dispensor \n",
+    "### Moldex plugstation<br>\n",
     "\n",
     "***\n",
     "\n",
-    "# Model of Earplugs\n",
-    "## Sparkplugs<br>\n",
+    "## Model of Earplugs\n",
+    "### Sparkplugs<br>\n",
     "\n",
     "Part #6644 (slc 80, 29 db, Class 5 [describes decibal rating])<br>\n",
     "Noise reduction rating = 33 decibels<br>\n",
@@ -45,8 +46,8 @@
    "id": "264365fc",
    "metadata": {},
    "source": [
-    "# Earplugs Company\n",
-    "## Moldex-Metric, inc.\n",
+    "## Earplugs Company\n",
+    "### Moldex-Metric, inc.\n",
     "10111 Jefferson blvd.<br>\n",
     "Culver City, CA<br>\n",
     "90232<br>\n",
